# HOSV

./: .env.example  .gitignore  README.md  build.sh
.github/workflows/: ci.yml
HOSVApi/: CMakeLists.txt
HOSVApi/cmake/: FindMbedTLS.cmake
HOSVApi/examples/: text_to_video.cpp
HOSVApi/include/seedance2/: seedance2.hpp
HOSVApi/scripts/: build.bat  build.sh
HOSVApi/src/: seedance2.cpp
HOSVMain/: CMakeLists.txt
HOSVMain/include/: AppModel.hpp  IX11Backend.hpp  JobController.hpp  SeedanceService.hpp
HOSVMain/include/providers/: BridgeProcessRunner.hpp  BytePlusArkVideoProvider.hpp  VideoProvider.hpp
HOSVMain/src/: JobController.cpp  SeedanceService.cpp  main.cpp
HOSVMain/src/providers/: BridgeProcessRunner.cpp  BytePlusArkVideoProvider.cpp
tools/arkbridge/: go.mod
tools/arkbridge/cmd/arkbridge/: main.go  main_test.go
tools/arkbridge/internal/bridge/: protocol.go
tools/arkbridge/internal/byteplus/: client.go  status.go  tasks.go  tasks_test.go
tools/arkbridge/internal/config/: config.go  config_test.go
tools/arkbridge/internal/logging/: redact.go  redact_test.go
